<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_titulo02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_titulo02"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="333dp"
        android:layout_height="339dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo02"
        app:srcCompat="@drawable/codando" />

    <TextView
        android:id="@+id/txt_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_texto"
        android:textColor="@color/secondaryColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_texto">

        <!-- Primeira Coluna -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_nome"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/lbl_nome" />

            <TextView
                android:id="@+id/lbl_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/lbl_sobrenome" />

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/lbl_email" />
        </LinearLayout>

        <!-- Segunda Coluna -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultadoNome"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/txt_nome" />

            <TextView
                android:id="@+id/resultadoSobrenome"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/txt_sobrenome" />

            <TextView
                android:id="@+id/resultadoEmail"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/txt_email" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
