<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/editavel_titulo"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/editavel_titulo"
        android:textColor="@color/primaryColor"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="331dp"
        android:layout_height="303dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/robo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editavel_titulo" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="405dp"
        android:layout_height="255dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <EditText
            android:id="@+id/editavel_nome"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/editavel_nome"
            android:inputType="text" />

        <EditText
            android:id="@+id/editavel_sobrenome"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/editavel_sobrenome"
            android:inputType="text" />

        <EditText
            android:id="@+id/editavel_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/editavel_email"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/campo_spiner_sexo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/campo_spiner_sexo"
            android:prompt="@string/campo_spiner_sexo" />

    </LinearLayout>

    <Button
        android:id="@+id/editavel_botao"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/editavel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>